Enabled Aero Peek on Selection (BAD EXPERIENCE)
Even though everything works as expected. it is a very bad experience. To flashy and annoying.

I also removed the the automaximize. Its no longer neccessary with peek.

Next step would be taking care of the flash while populating the windows

--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -15,7 +15,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -63,6 +63,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Components\InteropAndHelpers.cs" />
+    <Compile Include="Components\LivePreview.cs" />
     <Compile Include="Components\OpenWindows.cs" />
     <Compile Include="Components\Window.cs" />
     <Compile Include="Components\WindowSearch.cs" />
