Added Result class. Added some comments to explain the view of windows

--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Components\OpenWindows.cs" />
     <Compile Include="Components\Window.cs" />
     <Compile Include="Components\WindowSearch.cs" />
+    <Compile Include="Components\WindowSearchResult.cs" />
     <Compile Include="HotKeyHandler.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
