--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -89,9 +89,8 @@
     </ApplicationDefinition>
     <Compile Include="Components\Settings.cs" />
     <Compile Include="Components\SettingsManager.cs" />
-    <Compile Include="SettingsWindow.xaml.cs">
-      <DependentUpon>SettingsWindow.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="MVVMHelpers\PropertyChangedBase.cs" />
+    <Compile Include="ViewModels\WindowWalkerViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -115,10 +114,6 @@
     <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="SettingsWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
