Improve navigation by moving only through relay commands

--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Components\Settings.cs" />
     <Compile Include="Components\SettingsManager.cs" />
     <Compile Include="MVVMHelpers\PropertyChangedBase.cs" />
+    <Compile Include="MVVMHelpers\RelayCommand.cs" />
     <Compile Include="ViewModels\WindowWalkerViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
