--- a/Window Walker/Window Walker/packages.config
+++ b/Window Walker/Window Walker/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="MahApps.Metro" version="0.13.1.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net45" />
+  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net45" />
 </packages>
