--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -125,7 +125,7 @@
     <Compile Include="Components\LivePreview.cs" />
     <Compile Include="Components\OpenWindows.cs" />
     <Compile Include="Components\Window.cs" />
-    <Compile Include="Components\WindowSearchController.cs" />
+    <Compile Include="Components\SearchController.cs" />
     <Compile Include="Components\SearchResult.cs" />
     <Compile Include="HotKeyHandler.cs" />
     <Compile Include="MainWindow.xaml.cs">
