--- a/Window Walker/Window Walker/packages.config
+++ b/Window Walker/Window Walker/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MahApps.Metro" version="0.13.1.0" targetFramework="net45" />
-  <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
-  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net45" />
-  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net45" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.2.1" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="3.0.0" targetFramework="net472" />
 </packages>
