--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -43,6 +43,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -52,6 +53,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet />
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
@@ -115,6 +117,7 @@
     <Compile Include="Components\Commands.cs" />
     <Compile Include="Components\Settings.cs" />
     <Compile Include="Components\SettingsManager.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MVVMHelpers\PropertyChangedBase.cs" />
     <Compile Include="MVVMHelpers\RelayCommand.cs" />
     <Compile Include="ViewModels\WindowWalkerViewModel.cs" />
@@ -172,6 +175,7 @@
     </None>
     <AppDesigner Include="Properties\" />
     <Resource Include="Resources\Entypo.ttf" />
+    <None Include="StyleCop.json" />
     <None Include="Window Walker_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
