--- a/Window Walker/Window Walker/Window Walker.csproj
+++ b/Window Walker/Window Walker/Window Walker.csproj
@@ -43,7 +43,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet />
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -53,7 +54,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet />
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
@@ -114,13 +116,18 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Components\ApplicationUpdates.cs" />
+    <Compile Include="Components\Command.cs" />
     <Compile Include="Components\Commands.cs" />
+    <Compile Include="Components\FuzzyMatchingUnitTest.cs" />
+    <Compile Include="Components\Point.cs" />
+    <Compile Include="Components\SearchString.cs" />
     <Compile Include="Components\Settings.cs" />
     <Compile Include="Components\SettingsManager.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MVVMHelpers\PropertyChangedBase.cs" />
     <Compile Include="MVVMHelpers\RelayCommand.cs" />
     <Compile Include="ViewModels\WindowWalkerViewModel.cs" />
+    <Compile Include="WindowSearchResultToXamlConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -175,7 +182,7 @@
     </None>
     <AppDesigner Include="Properties\" />
     <Resource Include="Resources\Entypo.ttf" />
-    <None Include="StyleCop.json" />
+    <AdditionalFiles Include="StyleCop.json" />
     <None Include="Window Walker_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -226,6 +233,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Entypo-license.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.0\build\MaterialDesignThemes.targets')" />
