--- a/Window Walker/Window Walker/packages.config
+++ b/Window Walker/Window Walker/packages.config
@@ -5,4 +5,5 @@
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.1" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="3.0.0" targetFramework="net472" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net472" developmentDependency="true" />
 </packages>
